Change but broken

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@ layout: default
               <p class="card-text">
                 Community leagues are recognized by the City of Edmonton as the primary speaking body for a community. We are independent and our members help determine our priorities
               </p>
-              <a href="/membership-neigbourhood-decisions" class="btn btn-min btn-secondary">Learn More</a>
+              <a href="/membership#neigbourhood-decisions" class="btn btn-min btn-secondary">Learn More</a>
             </div>
           </div>
 
@@ -150,7 +150,7 @@ layout: default
 
       </div>
       <div class="col-sm-6 images-outer ">
-        <img src="/assets/img/hall.jpg" class="thumbnail">
+        <img class="img-fluid" src="/assets/img/hall.jpg" class="thumbnail">
 
       </div>
     </div>
