--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@ layout: default
 
 
       </div>
-      <div class="col-sm-6 images-outer ">
+      <div class="offset-md-1 col-md-5 col-sm-6 images-outer ">
         <img class="img-fluid" src="/assets/img/hall.jpg" class="thumbnail">
 
       </div>
