--- a/_programs/index.html
+++ b/_programs/index.html
@@ -3,44 +3,70 @@ layout: default
 permalink: programs/index.html
 title: Programs
 ---
+<div class="segment events">
+  <div class="container">
+    <div class="segment-title">
+      <h2>Upcoming Events</h2>
+    </div>
 
+    <div class="row">
+      {% assign events = site.programs | where: "type","Event" | where: "published", true %}
+      {% unless events.size > 0 %}
+        <h3>Ooops!</h3>
+        <p>
+          Currently no upcoming events. Check back later!
+        </p>
+      {% endunless %}
+
+      {% for event in events %}
+        <section class="program program-contained" style="background: {{event.cover_img_color}};">
+          <a href="{{ event.url | prepend: site.baseurl }}">
+            <img class="background" src="/assets/img/programs/{{ event.cover_img}}" alt="">
+            <div class="summary">
+              <h3>{{ event.title }}</h3>
+              <p>{{ event.teaser }}</p>
+            </div>
+          </a>
+        </section>
+      {% endfor %}
+    </div>
+
+  </div>
+</div>
+
+
+
+<div class="segment segment-nopadding programs">
   <div class="container-fluid">
-    <div class="programs segment">
-      <div class="title">
-        <h2>Our Programs</h2>
-        <div class="short-text">
-          <div class="sep l"></div>
-          Empirepark offers a variety of community based programs year round
-          <span class="sep r"></span>
-        </div>
-      </div>
+    <div class="segment-title">
+      <h2>Our Programs</h2>
+      <p class="short-lead">
+        <span class="sep l"></span>
+        Empirepark offers a variety of community based programs year round
+        <span class="sep r"></span>
+      </p>
+    </div>
 
-      {% unless site.programs.size > 1 %}
+
+    <div class="row no-gutters">
+      {% assign programs = site.programs | where: "type","Program" | where: "published", true %}
+
+      {% unless programs.size > 0 %}
         <h3>Ooops!</h3>
         <p>
           Currently no programs are offered at empire park. Check back later!
         </p>
       {% endunless %}
 
-
-      {% for program in site.programs %}
-
-        {% if program.title == 'Programs' %}
-          {% continue %}
-        {% endif %}
-
-        {% if program.published == false %}
-          {% continue %}
-        {% endif %}
-
+      {% for program in programs %}
         {% assign screen_width = "program-fullscreen" %}
-
         {% if forloop.last %}
           {% assign mod = forloop.index | modulo: 2 %}
-          {% if mod == 0 %}
+          {% if mod != 0 %}
             {% assign screen_width = "" %}
           {% endif %}
         {% endif %}
+
 
         <section class="program {{ screen_width }}" style="background: {{program.cover_img_color}};">
           <a href="{{ program.url | prepend: site.baseurl }}">
@@ -54,3 +80,4 @@ title: Programs
       {% endfor %}
     </div>
   </div>
+</div>
