Fix Membership Page

--- a/membership/index.html
+++ b/membership/index.html
@@ -1,5 +1,6 @@
 ---
 layout: default
+published: true
 ---
 <section class="segment" id="access-&-discounts">
   <img src="http://placehold.it/350x350" alt="">
