--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ layout: default
               <p class="card-text">
                 Membership provides access to minor sports such as Soccer and Baseball along with some discounts at City of Edmonton Recreation Facilities
               </p>
-              <a href="/membership#access-&-discounts" class="btn btn-min btn-secondary">Learn More</a>
+              {%comment%}<a href="/membership#access-&-discounts" class="btn btn-min btn-solid">Learn More</a>{%endcomment%}
             </div>
           </div>
 
@@ -49,7 +49,7 @@ layout: default
               <p class="card-text">
                 Each membership grants users several entries into Edmonton Confederation Pool's public swim times for free. Just one more perk of being a member
               </p>
-              <a href="/membership#free-swimming" class="btn btn-min btn-secondary">Learn More</a>
+              {%comment%}<a href="/membership#free-swimming" class="btn btn-min btn-solid">Learn More</a>{%endcomment%}
             </div>
           </div>
 
@@ -65,7 +65,7 @@ layout: default
               <p class="card-text">
                 Community leagues are recognized by the City of Edmonton as the primary speaking body for a community. We are independent and our members help determine our priorities
               </p>
-              <a href="/membership#neigbourhood-decisions" class="btn btn-min btn-secondary">Learn More</a>
+              {%comment%}<a href="/membership#neigbourhood-decisions" class="btn btn-min btn-solid">Learn More</a>{%endcomment%}
             </div>
           </div>
 
@@ -81,7 +81,7 @@ layout: default
               <p>
                 Need a place to hold a birthday party? We offer greatly discounted rental rates for our hall to our members
               </p>
-              <a href="/membership#hall-rental" class="btn btn-min btn-secondary">Learn More</a>
+              {%comment%}<a href="/membership#hall-rental" class="btn btn-min btn-solid">Learn More</a>{%endcomment%}
             </div>
           </div>
         </div>
@@ -122,10 +122,12 @@ layout: default
             <p>
               {{ featured_event_data.teaser | default: featured_event.teaser }}
             </p>
+            {%comment%}
             <a href="{{ featured_event.url }}" class="btn btn-big btn-solid mt-3">
               <i class="fa fa-compass"></i>
               <span>Learn More</span>
             </a>
+            {%endcomment%}
           </div>
         </div>
       </div>
