--- a/membership/index.html
+++ b/membership/index.html
@@ -2,52 +2,110 @@
 layout: default
 published: true
 ---
-<section class="segment" id="access-&-discounts">
-  <img src="http://placehold.it/350x350" alt="">
-  Donec maximus posuere consectetur. Donec eget venenatis neque. Proin scelerisque, orci vitae ultricies posuere, velit tellus varius urna, nec ornare justo eros vitae arcu. Aliquam consequat convallis tristique. Mauris ultricies eros ultrices elit dignissim tristique. Aliquam sit amet blandit elit, quis faucibus lorem. Duis varius orci eu imperdiet posuere. Praesent in dolor nec justo vestibulum congue. Donec vehicula, augue sed varius pretium, nisl nisi malesuada mauris, quis varius nisi leo eu lorem. Sed quis nunc in metus posuere iaculis. Vestibulum vel tristique ex.
 
- Vestibulum vel massa vitae felis pretium aliquet. Praesent diam dui, sodales sit amet aliquet in, luctus vel neque. Donec ullamcorper quis est sed blandit. Aliquam hendrerit id ipsum vitae venenatis. Aliquam aliquam venenatis imperdiet. Pellentesque lacinia diam lectus, vel luctus tellus molestie vel. Fusce ante dui, aliquam molestie consectetur quis, efficitur sodales sem. Quisque sit amet varius mauris. Ut vehicula hendrerit luctus. Aenean nulla tellus, imperdiet id elementum at, bibendum eget justo. Aenean molestie nibh et vulputate congue. Suspendisse ultrices leo nec arcu aliquet scelerisque.
+<div class="container membership-features">
 
- Praesent porttitor risus in fringilla rutrum. Aenean turpis nibh, porttitor pharetra fermentum pharetra, molestie nec lectus. Morbi molestie, nulla eu feugiat ullamcorper, neque nisi faucibus ligula, nec ullamcorper urna nisl porta ipsum. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Nunc ultrices auctor urna, auctor feugiat sem tempor nec. Aliquam ac justo vel lectus dapibus vulputate. Morbi blandit laoreet purus nec commodo.
 
- Pellentesque lectus mauris, maximus non porttitor at, cursus sed neque. Quisque facilisis justo et massa sollicitudin facilisis. Aliquam erat volutpat. Mauris ut ultrices dui. Suspendisse efficitur ex eu ante ullamcorper, ac pretium mauris aliquet. Donec quis faucibus mi. Mauris nec dapibus ligula. Sed ut nulla non arcu sodales sagittis. Quisque mi magna, laoreet ut commodo id, pulvinar id erat. Proin ac turpis mi. Ut nisi lectus, consequat non condimentum quis, gravida placerat ex. Duis ornare nunc in lectus placerat, id viverra enim lobortis. Praesent tellus odio, pharetra vitae porttitor quis, iaculis ac lacus. Donec commodo rhoncus odio, nec tincidunt velit accumsan non. Sed tincidunt pellentesque metus, ut auctor ante efficitur ut.
-</section>
+  <section class="segment" id="access-&-discounts">
+    <div class="segment-title">
+      <h2>Access & Discounts</h2>
+      <div class="sep">
+        <div class="sep-inside"></div>
+      </div>
+    </div>
+    <img src="http://placehold.it/350x350" alt="">
 
-<hr>
+  </section>
 
-<section class="segment" id="free-swimming">
-  <img src="http://placehold.it/350x350" alt="">
-  Donec maximus posuere consectetur. Donec eget venenatis neque. Proin scelerisque, orci vitae ultricies posuere, velit tellus varius urna, nec ornare justo eros vitae arcu. Aliquam consequat convallis tristique. Mauris ultricies eros ultrices elit dignissim tristique. Aliquam sit amet blandit elit, quis faucibus lorem. Duis varius orci eu imperdiet posuere. Praesent in dolor nec justo vestibulum congue. Donec vehicula, augue sed varius pretium, nisl nisi malesuada mauris, quis varius nisi leo eu lorem. Sed quis nunc in metus posuere iaculis. Vestibulum vel tristique ex.
 
- Vestibulum vel massa vitae felis pretium aliquet. Praesent diam dui, sodales sit amet aliquet in, luctus vel neque. Donec ullamcorper quis est sed blandit. Aliquam hendrerit id ipsum vitae venenatis. Aliquam aliquam venenatis imperdiet. Pellentesque lacinia diam lectus, vel luctus tellus molestie vel. Fusce ante dui, aliquam molestie consectetur quis, efficitur sodales sem. Quisque sit amet varius mauris. Ut vehicula hendrerit luctus. Aenean nulla tellus, imperdiet id elementum at, bibendum eget justo. Aenean molestie nibh et vulputate congue. Suspendisse ultrices leo nec arcu aliquet scelerisque.
+  <section class="segment" id="free-swimming">
+    <div class="segment-title">
+      <h2>Swimming at Confederation Leisure Centre</h2>
+      <div class="sep">
+        <div class="sep-inside"></div>
+      </div>
+    </div>
+    <img src="http://placehold.it/350x350" alt="">
 
- Praesent porttitor risus in fringilla rutrum. Aenean turpis nibh, porttitor pharetra fermentum pharetra, molestie nec lectus. Morbi molestie, nulla eu feugiat ullamcorper, neque nisi faucibus ligula, nec ullamcorper urna nisl porta ipsum. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Nunc ultrices auctor urna, auctor feugiat sem tempor nec. Aliquam ac justo vel lectus dapibus vulputate. Morbi blandit laoreet purus nec commodo.
+    <p>
+      Our members can swim free of charge during
+      public swim times or lane swim times at Confederation
+      Leisure Centre, 11204-43 Ave. Just present your valid 2016/17
+      EPCL membership at the pool to get a City Recreation Facilities
+      card charged with 12 free swims. Valid only for Confederation
+      Pool and limited to family members listed on your membership
+      card. Call 311 or go to www.edmonton.ca/activities_parks_ recreation/
+      confederation-drop- in-pool-schedule.aspx for pool hours.
+    </p>
+  </section>
 
- Pellentesque lectus mauris, maximus non porttitor at, cursus sed neque. Quisque facilisis justo et massa sollicitudin facilisis. Aliquam erat volutpat. Mauris ut ultrices dui. Suspendisse efficitur ex eu ante ullamcorper, ac pretium mauris aliquet. Donec quis faucibus mi. Mauris nec dapibus ligula. Sed ut nulla non arcu sodales sagittis. Quisque mi magna, laoreet ut commodo id, pulvinar id erat. Proin ac turpis mi. Ut nisi lectus, consequat non condimentum quis, gravida placerat ex. Duis ornare nunc in lectus placerat, id viverra enim lobortis. Praesent tellus odio, pharetra vitae porttitor quis, iaculis ac lacus. Donec commodo rhoncus odio, nec tincidunt velit accumsan non. Sed tincidunt pellentesque metus, ut auctor ante efficitur ut.
-</section>
 
-<hr>
 
-<section class="segment" id="neighbourhood-decisions">
-  <img src="http://placehold.it/750x422" class="img-fluid img-thumbnail" alt="">
-  Donec maximus posuere consectetur. Donec eget venenatis neque. Proin scelerisque, orci vitae ultricies posuere, velit tellus varius urna, nec ornare justo eros vitae arcu. Aliquam consequat convallis tristique. Mauris ultricies eros ultrices elit dignissim tristique. Aliquam sit amet blandit elit, quis faucibus lorem. Duis varius orci eu imperdiet posuere. Praesent in dolor nec justo vestibulum congue. Donec vehicula, augue sed varius pretium, nisl nisi malesuada mauris, quis varius nisi leo eu lorem. Sed quis nunc in metus posuere iaculis. Vestibulum vel tristique ex.
+  <section class="segment" id="neighbourhood-decisions">
 
- Vestibulum vel massa vitae felis pretium aliquet. Praesent diam dui, sodales sit amet aliquet in, luctus vel neque. Donec ullamcorper quis est sed blandit. Aliquam hendrerit id ipsum vitae venenatis. Aliquam aliquam venenatis imperdiet. Pellentesque lacinia diam lectus, vel luctus tellus molestie vel. Fusce ante dui, aliquam molestie consectetur quis, efficitur sodales sem. Quisque sit amet varius mauris. Ut vehicula hendrerit luctus. Aenean nulla tellus, imperdiet id elementum at, bibendum eget justo. Aenean molestie nibh et vulputate congue. Suspendisse ultrices leo nec arcu aliquet scelerisque.
+  </section>
 
- Praesent porttitor risus in fringilla rutrum. Aenean turpis nibh, porttitor pharetra fermentum pharetra, molestie nec lectus. Morbi molestie, nulla eu feugiat ullamcorper, neque nisi faucibus ligula, nec ullamcorper urna nisl porta ipsum. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Nunc ultrices auctor urna, auctor feugiat sem tempor nec. Aliquam ac justo vel lectus dapibus vulputate. Morbi blandit laoreet purus nec commodo.
 
- Pellentesque lectus mauris, maximus non porttitor at, cursus sed neque. Quisque facilisis justo et massa sollicitudin facilisis. Aliquam erat volutpat. Mauris ut ultrices dui. Suspendisse efficitur ex eu ante ullamcorper, ac pretium mauris aliquet. Donec quis faucibus mi. Mauris nec dapibus ligula. Sed ut nulla non arcu sodales sagittis. Quisque mi magna, laoreet ut commodo id, pulvinar id erat. Proin ac turpis mi. Ut nisi lectus, consequat non condimentum quis, gravida placerat ex. Duis ornare nunc in lectus placerat, id viverra enim lobortis. Praesent tellus odio, pharetra vitae porttitor quis, iaculis ac lacus. Donec commodo rhoncus odio, nec tincidunt velit accumsan non. Sed tincidunt pellentesque metus, ut auctor ante efficitur ut.
-</section>
 
-<hr>
+  <section class="segment" id="hall-rental">
+    <div class="segment-title">
+      <h2>Rental Benefit</h2>
+      <div class="sep">
+        <div class="sep-inside"></div>
+      </div>
+    </div>
+    <img src="http://placehold.it/350x350" alt="">
 
-<section class="segment" id="hall-rental">
-  <img src="http://placehold.it/350x350" alt="">
-  Donec maximus posuere consectetur. Donec eget venenatis neque. Proin scelerisque, orci vitae ultricies posuere, velit tellus varius urna, nec ornare justo eros vitae arcu. Aliquam consequat convallis tristique. Mauris ultricies eros ultrices elit dignissim tristique. Aliquam sit amet blandit elit, quis faucibus lorem. Duis varius orci eu imperdiet posuere. Praesent in dolor nec justo vestibulum congue. Donec vehicula, augue sed varius pretium, nisl nisi malesuada mauris, quis varius nisi leo eu lorem. Sed quis nunc in metus posuere iaculis. Vestibulum vel tristique ex.
+  </section>
 
- Vestibulum vel massa vitae felis pretium aliquet. Praesent diam dui, sodales sit amet aliquet in, luctus vel neque. Donec ullamcorper quis est sed blandit. Aliquam hendrerit id ipsum vitae venenatis. Aliquam aliquam venenatis imperdiet. Pellentesque lacinia diam lectus, vel luctus tellus molestie vel. Fusce ante dui, aliquam molestie consectetur quis, efficitur sodales sem. Quisque sit amet varius mauris. Ut vehicula hendrerit luctus. Aenean nulla tellus, imperdiet id elementum at, bibendum eget justo. Aenean molestie nibh et vulputate congue. Suspendisse ultrices leo nec arcu aliquet scelerisque.
+  <section class="segment pricing" id="pricing">
+    <div class="segment-title">
+      <h2>Low Cost Pricing</h2>
+      <div class="sep">
+        <div class="sep-inside"></div>
+      </div>
+    </div>
+    <div class="card-group">
+      <div class="card">
+        <div class="card-block">
+          <h4 class="card-title">Single</h4>
+        </div>
+        <div class="card-block">
+          <p class="card-text">Offered to active students</p>
+        </div>
+        <div class="card-block">
+          <p class="card-text">$15</p>
+          <a href="http://efcl.org/membership/?league=46" class="btn btn-primary">Purchase Now</a>
+        </div>
+      </div>
 
- Praesent porttitor risus in fringilla rutrum. Aenean turpis nibh, porttitor pharetra fermentum pharetra, molestie nec lectus. Morbi molestie, nulla eu feugiat ullamcorper, neque nisi faucibus ligula, nec ullamcorper urna nisl porta ipsum. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Nunc ultrices auctor urna, auctor feugiat sem tempor nec. Aliquam ac justo vel lectus dapibus vulputate. Morbi blandit laoreet purus nec commodo.
+      <div class="card">
+        <div class="card-block">
+          <h4 class="card-title">Family</h4>
+        </div>
+        <div class="card-block">
+          <p class="card-text">Offered to active students</p>
+        </div>
+        <div class="card-block">
+          <p class="card-text">
+            $25
+          </p>
+          <a href="http://efcl.org/membership/?league=46" class="btn btn-primary">Purchase Now</a>
+        </div>
+      </div>
 
- Pellentesque lectus mauris, maximus non porttitor at, cursus sed neque. Quisque facilisis justo et massa sollicitudin facilisis. Aliquam erat volutpat. Mauris ut ultrices dui. Suspendisse efficitur ex eu ante ullamcorper, ac pretium mauris aliquet. Donec quis faucibus mi. Mauris nec dapibus ligula. Sed ut nulla non arcu sodales sagittis. Quisque mi magna, laoreet ut commodo id, pulvinar id erat. Proin ac turpis mi. Ut nisi lectus, consequat non condimentum quis, gravida placerat ex. Duis ornare nunc in lectus placerat, id viverra enim lobortis. Praesent tellus odio, pharetra vitae porttitor quis, iaculis ac lacus. Donec commodo rhoncus odio, nec tincidunt velit accumsan non. Sed tincidunt pellentesque metus, ut auctor ante efficitur ut.
-</section>
+      <div class="card">
+        <div class="card-block">
+          <h4 class="card-title">Senior</h4>
+        </div>
+        <div class="card-block">
+          <p class="card-text">Offered to active students</p>
+        </div>
+        <div class="card-block">
+          <p class="card-text">$5</p>
+          <a href="http://efcl.org/membership/?league=46" class="btn btn-primary">Purchase Now</a>
+        </div>
+      </div>
+    </div>
+  </section>
+</div>
