Update newsletter & upcoming event

--- a/index.html
+++ b/index.html
@@ -122,12 +122,12 @@ layout: default
             <p>
               {{ featured_event_data.teaser | default: featured_event.teaser }}
             </p>
-            {%comment%}
-            <a href="{{ featured_event.url }}" class="btn btn-big btn-solid mt-3">
+
+            <a href="/assets/rockstar camp.pdf" class="btn btn-big btn-solid mt-3">
               <i class="fa fa-compass"></i>
               <span>Learn More</span>
             </a>
-            {%endcomment%}
+
           </div>
         </div>
       </div>
